# baton

./: .gitignore  CLAUDE.md  README.md  setup.sh  test-setup.sh
.claude-plugin/: marketplace.json
docs/: README.md  catalyst-plugin.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
plugins/catalyst/: README.md
plugins/catalyst/.claude/: settings.json
plugins/catalyst/.claude-plugin/: plugin.json
plugins/catalyst/schemas/: memory-structure.schema.json  plugin-json.schema.json  skill-frontmatter.schema.json  subagent.schema.json  workflow-command.schema.json
plugins/catalyst/scripts/: validate-all.sh  validate-marketplace-json.sh  validate-plugin-json.sh
plugins/catalyst/skills/review/: SKILL.md
plugins/catalyst/skills/scaffold/: SKILL.md
plugins/catalyst/skills/scout/: SKILL.md
plugins/catalyst/skills/validate/: SKILL.md
plugins/catalyst/skills/workflow/: SKILL.md
plugins/catalyst/templates/flow-plugin/: CLAUDE.md.tmpl
plugins/catalyst/tests/: run-tests.sh  test-scaffold.sh  test-validate.sh  test-workflow-add.sh
plugins/catalyst/tests/uat/fixtures/fastapi-starter/: README.md  pyproject.toml  requirements.txt
plugins/catalyst/tests/uat/fixtures/fastapi-starter/app/: __init__.py  main.py
plugins/catalyst/tests/uat/fixtures/fastapi-starter/tests/: test_health.py
plugins/daily/: README.md
plugins/daily/.claude-plugin/: plugin.json
plugins/nextjs/: README.md
plugins/nextjs/.claude-plugin/: plugin.json
plugins/partner/: README.md
plugins/partner/.claude-plugin/: plugin.json
(+97 files in other folders)
